# nekoton-kotlin

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts  version.properties
examples/: BasicWallet.kt  EventMonitoring.kt  HDWallet.kt  MultiSigWallet.kt  README.md  SmartContractInteraction.kt  TokenOperations.kt
nekoton-jni/: Cargo.toml
nekoton-jni/src/: lib.rs
src/main/kotlin/com/broxus/nekoton/abi/: ContractAbi.kt  EventAbi.kt  FunctionAbi.kt
src/main/kotlin/com/broxus/nekoton/crypto/: KeyPair.kt  PublicKey.kt  Seed.kt  Signature.kt
src/main/kotlin/com/broxus/nekoton/models/: AccountState.kt  Address.kt  Cell.kt  CellBuilder.kt  CellSlice.kt  Message.kt  Tokens.kt  Transaction.kt  TransactionPhases.kt
src/main/kotlin/com/broxus/nekoton/transport/: Transport.kt
src/main/kotlin/com/mazekine/nekoton/: Native.kt
src/main/kotlin/com/mazekine/nekoton/abi/: ContractAbi.kt  EventAbi.kt  FunctionAbi.kt  NativeFunctionAbi.kt
src/main/kotlin/com/mazekine/nekoton/crypto/: BytesCodec.kt  Encoding.kt  KeyPair.kt  PublicKey.kt  Seed.kt  Signature.kt
src/main/kotlin/com/mazekine/nekoton/jetton/: JettonRoot.kt  JettonWallet.kt
src/main/kotlin/com/mazekine/nekoton/models/: AccountState.kt  Address.kt  Cell.kt  CellBuilder.kt  CellSlice.kt  Message.kt  Tokens.kt  Transaction.kt  TransactionPhases.kt
src/main/kotlin/com/mazekine/nekoton/transport/: GqlTransport.kt  JrpcTransport.kt  ProtoTransport.kt  Transport.kt
src/test/kotlin/com/mazekine/nekoton/: TestConfig.kt  TestUtils.kt
src/test/kotlin/com/mazekine/nekoton/abi/: ContractAbiTest.kt
(+12 files in other folders)
