[package]
name = "nekoton-jni"
version = "0.1.0"
edition = "2021"

[lib]
name = "nekoton_jni"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
nekoton = { path = "../../repos/nekoton", features = ["gql_transport", "jrpc_transport", "proto_transport", "wallet_core", "extended_models"] }
nekoton-jetton = { path = "../../repos/nekoton/nekoton-jetton" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
serde_json = "1.0"
hex = "0.4"
once_cell = "1.12.0"
rand = "0.8"
tiny-bip39 = { git = "https://github.com/broxus/tiny-bip39.git" }
tiny-hderive = { git = "https://github.com/broxus/tiny-hderive.git" }
ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }
env_logger = "0.10"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.10"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
